# transformer

./: .gitignore  README.md  config.py  monitor.ipynb  optimizer.py  pyproject.toml  tokenizer.py  training.ipynb  transformer.py  util.py
modal_lab/: README.md  modalrun.ipynb
notebooks/: modal-intro.ipynb  training.ipynb
notebooks/modal/: first-app.ipynb  modal-intro.ipynb
transformer/: __init__.py  model.py  optimizer.py  tokenizer.py  util.py
